# nuv

./: .gitignore  README.md  justfile  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-pypi.yml
docs/plans/: 2026-02-24-nuv-design.md  2026-02-24-nuv-implementation.md  2026-02-26-two-layer-installation.md  2026-03-02-spark-archetype-design.md  2026-03-02-spark-archetype-implementation.md
docs/reviews/: 2026-02-26-comprehensive-repo-review.md  2026-03-27-cli-ergonomics-review.md
docs/superpowers/plans/: 2026-04-30-polars-archetype.md
docs/superpowers/specs/: 2026-04-30-polars-archetype-design.md
src/nuv/: _logging.py  cli.py
src/nuv/commands/: new.py
src/nuv/templates/: main.py.tpl  pyproject.toml.tpl  readme.md.tpl
src/nuv/templates/fastapi/: _logging.py.tpl  app.py.tpl  config.py.tpl  conftest.py.tpl  dependencies.py.tpl  dockerfile.tpl  dockerignore.tpl  health.py.tpl  main.py.tpl  pyproject.toml.tpl  readme.md.tpl  routes_init.py.tpl  test_health.py.tpl
src/nuv/templates/polars/: _db.py.tpl  _io.py.tpl  _logging.py.tpl  config.py.tpl  conftest.py.tpl  gitignore.tpl  main.py.tpl  pyproject.toml.tpl  readme.md.tpl  test_io.py.tpl
src/nuv/templates/polars/notebooks/: explore.py.tpl
src/nuv/templates/script/: gitignore.tpl  main.py.tpl  pyproject.toml.tpl  readme.md.tpl  test_main.py.tpl
src/nuv/templates/spark/: _logging.py.tpl  config.py.tpl  conftest.py.tpl  example_job.py.tpl  explore_marimo.py.tpl  gitignore.tpl  main.py.tpl  pyproject.toml.tpl  readme.md.tpl  session.py.tpl  test_example.py.tpl
tests/: test_new.py
