[project]
name = "nuv"
version = "0.1.0"
description = "Scaffold opinionated uv Python projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Steven Carpenter" }]
keywords = ["uv", "cli", "scaffold", "project-template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/stevencarpenter/nuv"
Repository = "https://github.com/stevencarpenter/nuv"
Issues = "https://github.com/stevencarpenter/nuv/issues"

[project.scripts]
nuv = "nuv.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6",
    "ruff>=0.9",
    "ty>=0.0.1a1",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
addopts = "--cov=nuv --cov-report=term-missing --cov-fail-under=100"

[tool.ruff]
target-version = "py311"
line-length = 180

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.hatch.build.targets.wheel]
packages = ["src/nuv"]
include = ["src/nuv/**/*.tpl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
